changed css and added html

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,12 @@
 
+html {
+	height: 100%;
+	margin: 0px;
+}
+
 body {
-	position: relative;
 	margin: auto;
-	padding: 0px 0px 0px 0px;
+	padding: 0px;
 	font-family: 'Quicksand', sans-serif;
 	max-width: 1200px;
 	height: 100%;
@@ -12,14 +16,15 @@ body {
 header {
 	margin: 20px 0px 0px 0px;
 	padding-top: 2%;
+	overflow: hidden;
 }
 
 h1 {
-	padding: 2%;
+	padding: 1.5% 2% 0 2%;
+	margin-left: 13%;
 	background: #38364C;
 	color: white;
 	display: inline;
-	margin-right: 13%;
 	font-family: 'Rubik', sans-serif;
 	font-size: 30px;
 }
@@ -33,12 +38,32 @@ nav a {
 	padding-left: 2%;
 	padding-right: 2%;
 	float: right;
+	color: #38364C;
+	font-size: 18px;
+	text-decoration: none;
 }
 
+/*could turn hr into vr instead of using border property */
 #centerNavA {
 	border-left: 2px solid #38364C;
 	border-right: 2px solid #38364C;
+	margin: 0px 10px;
 }
+
+nav a:hover {
+	font-size: 20px;
+	font-weight: bold;
+}
+
+nav a:active {
+	border: 2px solid #38364c;
+	border-radius: 25px
+}
+
+nav a:visited {
+	color: #3d2a4c;
+}
+
 
 
 
@@ -50,49 +75,77 @@ h2{
 	font-size: 20px;
 	color: #38364C;
 	padding-bottom: 3%;
-	border-bottom: #e3bab3 solid 2px;
-	margin-bottom: 20px; 
+	border-bottom: 2px solid #e3bab3;
 
 }
 
 
 /* Main body style */
 main {
-	position: relative;
 	background: #e9dccd;
 	background: linear-gradient(#e9dccd, #e3bab3);
 	padding: 3%;
+	padding-bottom: 8%;
 	overflow: auto;
-	margin: 0px;
 	border-top: 1px solid #38364C;
 }
 
 .contentBox {
-	max-width: 800px;
+	max-width: 900px;
 	margin: auto;
 }
 
-/*About me style section */
-#aboutMe {
+/* Main style section for all pages*/
+.mainSection {
 	padding: 2%;
-	width: 45%;
+	width: 50%;
 	background: #e9dccd;
 	border: 1px solid #38364C;
 	border-radius: 20px;
 	float: left;
 }
 
-#aboutPhoto {
+
+/* Index.html about profile photo */
+#aboutPhoto{
 	max-height: 230px;
 	display: inline-block;
 	float: left;
-	padding-right: 25px;
+	padding-right: 20px;
 }
 
 
+/* portfolio.html styling on the main section */
+.alignCenter{
+	text-align: center;
+}
+
+.portfolioSection{
+	position: relative;
+	width: 150px;
+	display: inline-block;
+	margin: 3%;
+}
+
+/* h3 portfolio styling */
+h3.portfolioText {
+	font-size: 18px;
+	font-family: 'Rubik', sans-serif;
+	color: #fff;
+	background: #849974; 
+	position: absolute;
+	bottom: 0px;
+	width: 100%;
+	text-align: center;
+}
+
+/* image styling */
+.portfolioImg {
+
+}
 
 /*Contact me section */
-#connectWithMe {
+.connectWithMe {
 	padding: 2%;
 	width: 35%;
 	background: #e9dccd;
@@ -101,26 +154,38 @@ main {
 	float: right;
 }
 
-#connectWithMe img {
-	max-width: 70px;
+.connectWithMe img {
+	width: 60px;
+	height: 60px;
 	margin: auto;
+	padding: 2%;
 }
 
-#connectWithMe section {
+.connectWithMe section {
 	padding: 20px 0px;
 	margin: auto;
 	text-align: center;
 }
 
+/* Contact.html form styling */
+fieldset {
+	padding: 2%;
+}
+
+.width100 {
+	width: 100%;
+}
+
+input {
+	margin: 1% 0;
+}
+
+
 /*Footer */
 footer {
 	padding: 2%;
 	background: #38364C;
-	border-top: #849974 solid 5px;
+	border-top: #849974 solid 8px;
 	text-align: center;
 	color: #fff;
-	position: relative;
-	right: 0;
-	bottom:0;
-	left: 0;
 }
