--- a/Home/css/creative.css
+++ b/Home/css/creative.css
@@ -294,6 +294,7 @@ header .header-content .header-content-inner p {
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
   transition: all 0.35s;
+  margin: 5px;
 }
 .btn-default:hover,
 .btn-default:focus,
