--- a/css/creative.css
+++ b/css/creative.css
@@ -27,7 +27,7 @@ a {
 }
 a:hover,
 a:focus {
-  color: #eb3812;
+  color: #45a1f1;
 }
 h1,
 h2,
@@ -74,15 +74,17 @@ aside {
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
   font-weight: 700;
   text-transform: uppercase;
+  margin-left: 25px;
 }
+/*
 .navbar-default .navbar-header .navbar-brand:hover,
 .navbar-default .navbar-header .navbar-brand:focus {
   color: #eb3812;
-}
+}*/
 .navbar-default .navbar-header .navbar-toggle {
   font-weight: 700;
   font-size: 12px;
-  color: #222222;
+  color: #396675;
   text-transform: uppercase;
 }
 .navbar-default .nav > li > a,
@@ -90,11 +92,11 @@ aside {
   text-transform: uppercase;
   font-weight: 700;
   font-size: 13px;
-  color: #222222;
+  color: #396675;
 }
 .navbar-default .nav > li > a:hover,
 .navbar-default .nav > li > a:focus:hover {
-  color: #396675;
+  color: #45a1f1;
 }
 .navbar-default .nav > li.active > a,
 .navbar-default .nav > li.active > a:focus {
@@ -105,45 +107,46 @@ aside {
 .navbar-default .nav > li.active > a:focus:hover {
   background-color: transparent;
 }
+
 @media (min-width: 768px) {
   .navbar-default {
     background-color: transparent;
     border-color: rgba(255, 255, 255, 0.3);
   }
   .navbar-default .navbar-header .navbar-brand {
-    color: rgba(255, 255, 255, 0.7);
+    color: #396675;
   }
   .navbar-default .navbar-header .navbar-brand:hover,
   .navbar-default .navbar-header .navbar-brand:focus {
-    color: white;
+    color: #45a1f1;
   }
   .navbar-default .nav > li > a,
   .navbar-default .nav > li > a:focus {
-    color: rgba(255, 255, 255, 0.7);
+    color: #396675;
   }
   .navbar-default .nav > li > a:hover,
   .navbar-default .nav > li > a:focus:hover {
-    color: white;
+    color: #45a1f1;
   }
   .navbar-default.affix {
     background-color: white;
     border-color: rgba(34, 34, 34, 0.05);
   }
-  .navbar-default.affix .navbar-header .navbar-brand {
+/*  .navbar-default.affix .navbar-header .navbar-brand {
     color: #396675;
     font-size: 14px;
-  }
-  .navbar-default.affix .navbar-header .navbar-brand:hover,
+  }*/
+ /* .navbar-default.affix .navbar-header .navbar-brand:hover,
   .navbar-default.affix .navbar-header .navbar-brand:focus {
     color: #eb3812;
-  }
+  }*/
   .navbar-default.affix .nav > li > a,
   .navbar-default.affix .nav > li > a:focus {
-    color: #222222;
+    color: #396675;
   }
   .navbar-default.affix .nav > li > a:hover,
   .navbar-default.affix .nav > li > a:focus:hover {
-    color: #396675;
+    color: #45a1f1;
   }
 }
 header {
@@ -155,9 +158,9 @@ header {
   background-size: cover;
   -o-background-size: cover;
   background-position: center;
-  background-image: url('../img/header.jpg');
+  background-image: url('../img/header.jpeg');
   text-align: center;
-  color: white;
+  color: #396675;
 }
 header .header-content {
   position: relative;
@@ -165,6 +168,23 @@ header .header-content {
   padding: 100px 15px 100px;
   width: 100%;
 }
+header .header-content .header-content-inner{
+    max-width: 870px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgba(255, 255, 255, 0.81);
+    border-radius: 12px;
+    padding: 20px 10px;
+}
+
+header .header-content .header-content-inner img {
+  height: 100px;
+  -moz-border-radius: 50px;
+  -webkit-border-radius: 50px;
+  border-radius: 50px;
+  box-shadow: 1px 2px 15px #a5a5a5;
+}
+
 header .header-content .header-content-inner h1 {
   font-weight: 700;
   text-transform: uppercase;
@@ -177,9 +197,8 @@ header .header-content .header-content-inner hr {
 }
 header .header-content .header-content-inner p {
   font-weight: 300;
-  color: rgba(255, 255, 255, 0.7);
+  color: #396675;
   font-size: 16px;
-  margin-bottom: 50px;
 }
 @media (min-width: 768px) {
   header {
@@ -193,17 +212,20 @@ header .header-content .header-content-inner p {
     transform: translateY(-50%);
     padding: 0 50px;
   }
-  header .header-content .header-content-inner {
-    max-width: 1000px;
+  /*header .header-content .header-content-inner {
+    max-width: 870px;
     margin-left: auto;
     margin-right: auto;
-  }
+    background-color: rgba(255, 255, 255, 0.81);
+    border-radius: 12px;
+    padding: 20px 10px;
+  }*/
   header .header-content .header-content-inner h1 {
     font-size: 50px;
   }
   header .header-content .header-content-inner p {
     font-size: 18px;
-    max-width: 80%;
+    max-width: 95%;
     margin-left: auto;
     margin-right: auto;
   }
