--- a/css/creative.css
+++ b/css/creative.css
@@ -201,8 +201,11 @@ header .header-content .header-content-inner p {
   font-size: 16px;
 }
 @media (min-width: 768px) {
-  header {
+  #indexHeader {
     min-height: 100%;
+  }
+  .portfolioHeader{
+    min-height: 25%;
   }
   header .header-content {
     position: absolute;
