--- a/css/creative.css
+++ b/css/creative.css
@@ -234,6 +234,14 @@ header .header-content .header-content-inner p {
   }
 } /*end of header media query*/
 
+header .header-subpage{
+    position: relative;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    padding: 0 50px;
+}
 #profilePic {
   max-height: 240px;
 }
