adjustment to layout and copy

--- a/css/creative.css
+++ b/css/creative.css
@@ -10,9 +10,11 @@ body {
 }
 body {
   font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
+  --main-font-color: #354f44;
+  --light-green: #6d897d;
 }
 hr {
-  border-color: #396675;
+  border-color: var(--main-font-color);
   border-width: 3px;
   max-width: 50px;
 }
@@ -23,11 +25,11 @@ a {
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
   transition: all 0.35s;
-  color: #396675;
+  color: var(--main-font-color);
 }
 a:hover,
 a:focus {
-  color: #4C8294;
+  color: var(--light-green);
 }
 h1,
 h2,
@@ -43,7 +45,7 @@ p {
   margin-bottom: 20px;
 }
 .bg-primary {
-  background-color: #396675;
+  background-color: var(--light-green);
 }
 .bg-dark {
   background-color: #222222;
@@ -70,7 +72,7 @@ aside {
   transition: all 0.35s;
 }
 .navbar-default .navbar-header .navbar-brand {
-  color: #396675;
+  color: var(--main-font-color);
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
   font-weight: 700;
   text-transform: uppercase;
@@ -84,7 +86,7 @@ aside {
 .navbar-default .navbar-header .navbar-toggle {
   font-weight: 700;
   font-size: 12px;
-  color: #396675;
+  color: var(--main-font-color);
   text-transform: uppercase;
 }
 .navbar-default .nav > li > a,
@@ -92,7 +94,7 @@ aside {
   text-transform: uppercase;
   font-weight: 700;
   font-size: 13px;
-  color: #396675;
+  color: var(--main-font-color);
 }
 .navbar-default .nav > li > a:hover,
 .navbar-default .nav > li > a:focus:hover {
@@ -100,7 +102,7 @@ aside {
 }
 .navbar-default .nav > li.active > a,
 .navbar-default .nav > li.active > a:focus {
-  color: #396675 !important;
+  color: var(--main-font-color) !important;
   background-color: transparent;
 }
 .navbar-default .nav > li.active > a:hover,
@@ -114,7 +116,7 @@ aside {
     border-color: rgba(255, 255, 255, 0.3);
   }
   .navbar-default .navbar-header .navbar-brand {
-    color: #396675;
+    color: var(--main-font-color);
   }
   .navbar-default .navbar-header .navbar-brand:hover,
   .navbar-default .navbar-header .navbar-brand:focus {
@@ -122,7 +124,7 @@ aside {
   }
   .navbar-default .nav > li > a,
   .navbar-default .nav > li > a:focus {
-    color: #396675;
+    color: var(--main-font-color);
   }
   .navbar-default .nav > li > a:hover,
   .navbar-default .nav > li > a:focus:hover {
@@ -133,7 +135,7 @@ aside {
     border-color: rgba(34, 34, 34, 0.05);
   }
 /*  .navbar-default.affix .navbar-header .navbar-brand {
-    color: #396675;
+    color: var(--main-font-color);
     font-size: 14px;
   }*/
  /* .navbar-default.affix .navbar-header .navbar-brand:hover,
@@ -142,7 +144,7 @@ aside {
   }*/
   .navbar-default.affix .nav > li > a,
   .navbar-default.affix .nav > li > a:focus {
-    color: #396675;
+    color: var(--main-font-color);
   }
   .navbar-default.affix .nav > li > a:hover,
   .navbar-default.affix .nav > li > a:focus:hover {
@@ -159,29 +161,33 @@ header {
   -o-background-size: cover;
   background-position: center;
   text-align: center;
-  color: #396675;
+  color: var(--main-font-color);
 }
 header .header-content {
   position: relative;
   text-align: center;
   padding: 100px 15px 100px;
   width: 100%;
+  background-color: rgba(255, 255, 255, 0.81);
+  height: 100%;
+  display: flex;
+  align-items: center;
 }
 header .header-content .header-content-inner{
     max-width: 870px;
     margin-left: auto;
     margin-right: auto;
-    background-color: rgba(255, 255, 255, 0.81);
-    border-radius: 4px;
+/*    background-color: rgba(255, 255, 255, 0.81);
+*/    border-radius: 4px;
     padding: 20px 10px;
 }
 
 header .header-content .header-content-inner img {
-  height: 100px;
+  /*height: 100px;
   -moz-border-radius: 50px;
   -webkit-border-radius: 50px;
   border-radius: 50px;
-  box-shadow: 1px 2px 15px #a5a5a5;
+  box-shadow: 1px 2px 15px #a5a5a5;*/
 }
 
 header .header-content .header-content-inner h1 {
@@ -193,10 +199,11 @@ header .header-content .header-content-inner h1 {
 }
 header .header-content .header-content-inner hr {
   margin: 30px auto;
+  color: var(--main-font-color);
 }
 header .header-content .header-content-inner p {
   font-weight: 300;
-  color: #396675;
+  color: var(--main-font-color);
   font-size: 16px;
 }
 
@@ -236,6 +243,8 @@ header .header-content .header-content-inner p {
 
 #profilePic {
   max-height: 240px;
+  border-radius: 50%
+  
 }
 
 .section-heading {
@@ -325,7 +334,7 @@ header .header-content .header-content-inner p {
   margin: 0 auto 20px;
 }
 .text-primary {
-  color: #396675;
+  color: var(--main-font-color);
 }
 .no-gutter > [class*='col-'] {
   padding-right: 0;
@@ -382,8 +391,8 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-primary {
   color: white;
-  background-color: #396675;
-  border-color: #396675;
+  background-color: var(--main-font-color);
+  border-color: var(--main-font-color);
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
   transition: all 0.35s;
@@ -421,11 +430,11 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #396675;
-  border-color: #396675;
+  background-color: var(--main-font-color);
+  border-color: var(--main-font-color);
 }
 .btn-primary .badge {
-  color: #396675;
+  color: var(--main-font-color);
   background-color: white;
 }
 .btn {
